2015-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/scwrap2.boot:
	Fix handling of documentation comments in files
	containing multiple constructors

2015-01-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Correct a typo

2015-11-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Do not special case
	'$' in no argument case

2015-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/apply.boot, src/interp/iterator.boot,
	src/interp/c-util.boot, src/interp/macros.lisp,
	src/interp/define.boot, src/interp/lisplib.boot,
	src/interp/modemap.boot, src/interp/compiler.boot:
	Misc compiler cleanups and fixes

2015-11-11  Kurt Pagani  <nilqed@gmail.com>

	* contrib/load-fricas.lisp: Add primitives.lisp

2015-11-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/vector.spad: Generalize direct product

2015-11-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/format.boot: Do not crash on quoted expressions
	in types

2015-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/defintef.spad: Handle roots in
	'checkSMP'

2015-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nrunopt.boot: Quote constants in types

2015-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Qian Yun <oldk1331@gmail.com>

	* src/algebra/intpar.spad, src/interp/i-funsel.boot,
	src/interp/i-resolv.boot: Small cleanups

2015-11-02  Qian Yun <oldk1331@gmail.com>

	* src/algebra/intalg.spad: Revert wrong change from
	r1809

2015-11-01  Qian Yun <oldk1331@gmail.com>

	* src/algebra/manip.spad: Avoid generating roots of
	order 1

2015-11-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/msgdb.boot: Handle '%x' directive

2015-10-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/integrat.spad: Restore 'sin' and 'cos' in
	constants

2015-10-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Misc improvements and cleanups