@@ -1,5 +1,13 @@
 2015-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/jet.spad, src/algebra/aggcat.spad,
+	src/algebra/ffcat.spad, src/algebra/distro.spad,
+	src/algebra/dpolcat.spad, src/algebra/omcat.spad,
+	src/interp/iterator.boot, src/interp/macros.lisp:
+	Misc cleanups
+
+2015-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/scan.boot, src/interp/scwrap2.boot:
 	Fix handling of documentation comments in files
 	containing multiple constructors
